--- a/vhdl/backend/Altera/Firebee/firebee.qsf
+++ b/vhdl/backend/Altera/Firebee/firebee.qsf
@@ -283,26 +283,14 @@ set_location_assignment PIN_J1 -to CLK_USB
 set_location_assignment PIN_T4 -to CLK_25M
 set_location_assignment PIN_U8 -to FB_SIZE[0]
 set_location_assignment PIN_Y4 -to FB_SIZE[1]
-set_location_assignment PIN_T3 -to FB_BURSTn
 set_location_assignment PIN_T8 -to FB_CSn[1]
 set_location_assignment PIN_T9 -to FB_CSn[2]
 set_location_assignment PIN_V6 -to FB_CSn[3]
-set_location_assignment PIN_R6 -to FB_OEn
-set_location_assignment PIN_T5 -to FB_WRn
-set_location_assignment PIN_T21 -to MASTERn
-set_location_assignment PIN_E11 -to DREQ1n
-set_location_assignment PIN_A12 -to DACK1n
-set_location_assignment PIN_B12 -to DACK0n
-set_location_assignment PIN_T22 -to TOUT0n
 set_location_assignment PIN_AB17 -to CLK_DDR_OUT
-set_location_assignment PIN_AA17 -to CLK_DDR_OUTn
-set_location_assignment PIN_T18 -to VCSn
-set_location_assignment PIN_Y17 -to VWEn
 set_location_assignment PIN_AA15 -to VD_QS[0]
 set_location_assignment PIN_W15 -to VD_QS[1]
 set_location_assignment PIN_U22 -to VD_QS[2]
 set_location_assignment PIN_T16 -to VD_QS[3]
-set_location_assignment PIN_V1 -to PD_VGAn
 set_location_assignment PIN_A8 -to DSP_IO[0]
 set_location_assignment PIN_A7 -to DSP_IO[1]
 set_location_assignment PIN_B7 -to DSP_IO[2]
@@ -326,7 +314,6 @@ set_location_assignment PIN_M2 -to ACSI_CSn
 set_location_assignment PIN_M1 -to ACSI_RESETn
 set_location_assignment PIN_W2 -to CF_CSn[0]
 set_location_assignment PIN_W1 -to CF_CSn[1]
-set_location_assignment PIN_T7 -to FB_TAn
 set_location_assignment PIN_R2 -to IDE_CSn[0]
 set_location_assignment PIN_R1 -to IDE_CSn[1]
 set_location_assignment PIN_P1 -to IDE_RDn
@@ -337,10 +324,6 @@ set_location_assignment PIN_F20 -to IRQn[4]
 set_location_assignment PIN_P5 -to IRQn[5]
 set_location_assignment PIN_P7 -to IRQn[6]
 set_location_assignment PIN_N7 -to IRQn[7]
-set_location_assignment PIN_AA1 -to PCI_INTAn
-set_location_assignment PIN_V4 -to PCI_INTBn
-set_location_assignment PIN_V3 -to PCI_INTCn
-set_location_assignment PIN_P6 -to PCI_INTDn
 set_location_assignment PIN_P3 -to ROM3n
 set_location_assignment PIN_U2 -to ROM4n
 set_location_assignment PIN_N5 -to RP_LDSn
@@ -363,14 +346,11 @@ set_location_assignment PIN_F16 -to FDD_HD_DD
 set_location_assignment PIN_E16 -to FDD_INDEXn
 set_location_assignment PIN_K21 -to HSYNC
 set_location_assignment PIN_K19 -to VSYNC
-set_location_assignment PIN_G17 -to BLANKn
 set_location_assignment PIN_F19 -to CLK_PIXEL
-set_location_assignment PIN_F17 -to SYNCn
 set_location_assignment PIN_G15 -to FDD_STEP_DIR
 set_location_assignment PIN_F14 -to FDD_STEP
 set_location_assignment PIN_G16 -to FDD_MOT_ON
 set_location_assignment PIN_E5 -to LP_DIR
-set_location_assignment PIN_B11 -to RSTO_MCFn
 set_location_assignment PIN_F13 -to SD_D3
 set_location_assignment PIN_A5 -to DSP_SRD[1]
 set_location_assignment PIN_C6 -to DSP_SRD[2]
@@ -625,25 +605,16 @@ set_instance_assignment -name PASSIVE_RESISTOR "PULL-UP" -to SD_D1
 set_instance_assignment -name PASSIVE_RESISTOR "PULL-UP" -to SD_D0
 set_instance_assignment -name PASSIVE_RESISTOR "PULL-UP" -to SD_D3
 set_instance_assignment -name IO_STANDARD "2.5 V" -to VD_QS
-set_instance_assignment -name IO_STANDARD "2.5 V" -to VWEn
-set_instance_assignment -name IO_STANDARD "2.5 V" -to VCSn
 set_instance_assignment -name IO_STANDARD "3.0-V LVTTL" -to HSYNC
 set_instance_assignment -name IO_STANDARD "3.0-V LVTTL" -to CLK_PIXEL
 set_instance_assignment -name IO_STANDARD "3.0-V LVTTL" -to VSYNC
-set_instance_assignment -name IO_STANDARD "3.0-V LVTTL" -to BLANKn
-set_instance_assignment -name IO_STANDARD "3.0-V LVCMOS" -to SYNCn
 set_instance_assignment -name IO_STANDARD "3.0-V LVCMOS" -to IRQn[2]
 set_instance_assignment -name IO_STANDARD "3.0-V LVCMOS" -to IRQn[3]
 set_instance_assignment -name IO_STANDARD "3.0-V LVCMOS" -to IRQn[4]
-set_instance_assignment -name CURRENT_STRENGTH_NEW "MAXIMUM CURRENT" -to VCSn
 set_instance_assignment -name CURRENT_STRENGTH_NEW 12MA -to VD_QS
-set_instance_assignment -name CURRENT_STRENGTH_NEW "MAXIMUM CURRENT" -to VWEn
 set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to HSYNC
 set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to CLK_PIXEL
-set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to BLANKn
 set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to VSYNC
-set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to PD_VGAn
-set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to SYNCn
 set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to DSP_SRD
 set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to DSP_IO
 set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to DSP_SRWEn
@@ -671,13 +642,10 @@ set_instance_assignment -name AUTO_GLOBAL_CLOCK ON -to "altpll4:I_PLL4|altpll:al
 set_instance_assignment -name AUTO_GLOBAL_CLOCK ON -to "altpll4:I_PLL4|altpll:altpll_component|clk[3]"
 set_instance_assignment -name AUTO_GLOBAL_CLOCK ON -to "altpll1:I_PLL1|altpll:altpll_component|clk[0]"
 set_instance_assignment -name PAD_TO_CORE_DELAY 0 -to CLK_DDR_OUT
-set_instance_assignment -name CURRENT_STRENGTH_NEW 12MA -to CLK_DDR_OUTn
-set_instance_assignment -name IO_STANDARD "2.5 V" -to CLK_DDR_OUTn
 set_instance_assignment -name CURRENT_STRENGTH_NEW 12MA -to CLK_DDR_OUT
 set_instance_assignment -name IO_STANDARD "2.5 V" -to CLK_DDR_OUT
 set_instance_assignment -name GLOBAL_SIGNAL "GLOBAL CLOCK" -to CLK_33M
 set_instance_assignment -name GLOBAL_SIGNAL "GLOBAL CLOCK" -to CLK_DDR_OUT
-set_instance_assignment -name GLOBAL_SIGNAL "GLOBAL CLOCK" -to CLK_DDR_OUTn
 set_instance_assignment -name GLOBAL_SIGNAL "GLOBAL CLOCK" -to CLK_25M
 
 
@@ -689,4 +657,36 @@ set_instance_assignment -name IO_STANDARD "2.5 V" -to VRAS_n
 set_instance_assignment -name IO_STANDARD "2.5 V" -to VCAS_n
 set_instance_assignment -name CURRENT_STRENGTH_NEW "MAXIMUM CURRENT" -to VRAS_n
 set_instance_assignment -name CURRENT_STRENGTH_NEW "MAXIMUM CURRENT" -to VCAS_n
+set_location_assignment PIN_T3 -to FB_BURST_n
+set_location_assignment PIN_R6 -to FB_OE_N
+set_location_assignment PIN_T5 -to FB_WR_N
+set_location_assignment PIN_T21 -to MASTER_N
+set_location_assignment PIN_E11 -to DREQ1_n
+set_location_assignment PIN_A12 -to DACK1_n
+set_location_assignment PIN_B12 -to DACK0_n
+set_location_assignment PIN_T22 -to TOUT0_n
+set_location_assignment PIN_AA17 -to CLK_DDR_OUT_n
+set_location_assignment PIN_T18 -to VCS_n
+set_location_assignment PIN_Y17 -to VWE_n
+set_location_assignment PIN_V1 -to PD_VGA_n
+set_location_assignment PIN_T7 -to FB_TA_n
+set_location_assignment PIN_AA1 -to PCI_INTA_n
+set_location_assignment PIN_V4 -to PCI_INTB_n
+set_location_assignment PIN_V3 -to PCI_INTC_n
+set_location_assignment PIN_P6 -to PCI_INTD_n
+set_location_assignment PIN_G17 -to BLANK_n
+set_location_assignment PIN_F17 -to SYNC_n
+set_location_assignment PIN_B11 -to RSTO_MCF_n
+set_instance_assignment -name IO_STANDARD "2.5 V" -to VWE_n
+set_instance_assignment -name IO_STANDARD "2.5 V" -to VCS_n
+set_instance_assignment -name IO_STANDARD "3.0-V LVTTL" -to BLANK_n
+set_instance_assignment -name IO_STANDARD "3.0-V LVCMOS" -to SYNC_n
+set_instance_assignment -name CURRENT_STRENGTH_NEW "MAXIMUM CURRENT" -to VCS_n
+set_instance_assignment -name CURRENT_STRENGTH_NEW "MAXIMUM CURRENT" -to VWE_n
+set_instance_assignment -name CURRENT_STRENGTH_NEW 16MA -to BLANK_n
+set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to PD_VGA_n
+set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to SYNC_n
+set_instance_assignment -name CURRENT_STRENGTH_NEW 12MA -to CLK_DDR_OUT_n
+set_instance_assignment -name IO_STANDARD "2.5 V" -to CLK_DDR_OUT_n
+set_instance_assignment -name GLOBAL_SIGNAL "GLOBAL CLOCK" -to CLK_DDR_OUT_n
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
